--- a/client/src/index.css
+++ b/client/src/index.css
@@ -76,7 +76,7 @@ body{
   justify-content: center;
   padding: 0.5rem;
   color: white;
-  background: #ff0068;
+  background: #df7ba3;
   
 }
 
@@ -89,7 +89,7 @@ body{
 
 .message {
   color: white;
-  background: #ff0068;
+  background: #df7ba3;
   padding: 0.75rem;
   border-radius: 5px;
   max-width: 50%;
@@ -97,7 +97,7 @@ body{
 
 .message.self {
   color: white;
-  background: #f3ddea;
+  background: #faa4d6;
 }
 
 .message-footer {
@@ -110,7 +110,7 @@ body{
 /* Chat Input  */
 .chat-input {
   width: 100%;
-  background: #e10078;
+  background: #df7ba3;
   padding: 1rem;
 }
 .send-btn {
@@ -378,11 +378,11 @@ body{
 
 .notification {
   padding: 10px;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #f5a3a3;
 }
 
 .notification.not-read {
-  background: #f5f5f5;
+  background: #a34545;
 }
 
 .notification-time {
